fix: dark mode tables & code theme
Tables in dark mode were a bit broken so removed the background colors.

The dark mode theme for the code snippets had underlines that were
bugging me.

--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -172,7 +172,6 @@
   } /* Operator.Word */
   .w {
     color: #f8f8f8;
-    text-decoration: underline;
   } /* Text.Whitespace */
   .mf {
     color: #0000cf;
@@ -339,7 +338,6 @@
     } /* Generic.Strong */
     .gu {
       color: #ffffff;
-      text-decoration: underline;
     } /* Generic.Subheading */
     .gt {
       color: #d22323;
@@ -384,7 +382,6 @@
     } /* Name.Builtin */
     .nc {
       color: #447fcf;
-      text-decoration: underline;
     } /* Name.Class */
     .no {
       color: #40ffff;
@@ -406,7 +403,6 @@
     } /* Name.Label */
     .nn {
       color: #447fcf;
-      text-decoration: underline;
     } /* Name.Namespace */
     .nx {
       color: #d0d0d0;
